Fill the token budget when chunking and ingest batches concurrently
Chunking never reached app.rag.chunk-size. DocumentParserService split
text by paragraph and then called textSplitter.apply() on each paragraph
individually, so any paragraph under the budget passed through untouched
and the effective chunk size was the paragraph size. A 645-page manual
produced 7289 chunks with a median of 27 tokens against a configured 400,
14% of them under 10 tokens - single words like "WARN" and "Gradle"
stored as 768-dimension vectors and retrievable as context.

coalesceParagraphs() now joins consecutive paragraphs until adding the
next would exceed the budget. It counts with jtokkit CL100K_BASE, the
same encoding TokenTextSplitter uses by default, so the two stages cannot
drift; a character approximation would not do, because PDF tables are
space-padded and chars-per-token varies wildly. Grouping never spans
source documents: PagePdfDocumentReader emits one document per page, and
chunk metadata carries the pageNumber that the system prompt asks the
model to cite, so merging across pages would produce wrong citations.

Note that min-chunk-size-chars was never the relevant knob - it only
decides where the splitter looks for a sentence boundary when cutting an
over-budget chunk. min-chunk-length-to-embed is the only floor that
discards anything, and it is measured in characters; it moves 5 -> 100.

Ingestion also writes batches concurrently. ingest() is deliberately no
longer @Transactional: a JDBC transaction is bound to one thread and one
connection, so batch threads can never join it, and an enclosing
transaction would only pin an idle connection for the whole run while the
real writes committed outside it. Each batch commits in its own
REQUIRES_NEW transaction, and any failure compensates by deleting the
document's chunks through the existing deleteByDocumentId, preserving the
all-or-nothing guarantee the single transaction used to give.

Batch threads are virtual, bounded 